# ccwatch

./: .gitignore  Cargo.toml  DESIGN.md  README.md  README.zh-CN.md  config.example.toml
.github/workflows/: release.yml
docs/: ACP_RESEARCH.md
research/: acp_probe.py
src/: acp.rs  auto_answer.rs  backend.rs  classify.rs  config.rs  hooks.rs  lib.rs  main.rs  notify.rs  orchestrate.rs  record.rs  screen.rs  state.rs  status.rs  stuck.rs  tmux.rs  tui.rs  util.rs  watch.rs
tests/: classify_test.rs  dual_track_test.rs
